--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@eva-design/material": "^2.1.1",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@types/react-native-vector-icons": "^6.4.12",
+    "@ui-kitten/components": "^5.1.2",
+    "i18next": "^21.9.2",
     "react": "18.1.0",
-    "react-native": "0.70.1"
+    "react-i18next": "^11.18.6",
+    "react-native": "0.70.1",
+    "react-native-safe-area-context": "^4.3.4",
+    "react-native-screens": "^3.17.0",
+    "react-native-svg": "^13.2.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -23,7 +34,9 @@
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
+    "@ui-kitten/metro-config": "^5.1.2",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
