--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "screens/*": ["./src/screens/*"],
-      "components/*": ["./src/components/*"],
+      "screens": ["./src/screens"],
+      "components": ["./src/components"],
       "navigation": ["./src/navigation.ts",]
     }
   }
